--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -27,11 +27,11 @@
     "Entre otras cosas, *Django* cuenta con las siguientes funcionalidades:\n",
     "\n",
     "* Instalación y configuración sencilla y rápida.\n",
-    "* Cuenta con un ORM (Object Relational Mapper) avanzado.\n",
+    "* Cuenta con un *ORM* (Object Relational Mapper) avanzado.\n",
     "* Utiliza plantillas (templates) para desplegar aplicaciones.\n",
     "* Soporta múltipes idiomas.\n",
-    "* Diseñado para aprovechar el paradigma de desarrollo basado en pruebas (TDD).\n",
-    "* Se apega al patrón [MVC](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
+    "* Diseñado para aprovechar el paradigma de desarrollo basado en pruebas (*TDD*).\n",
+    "* Se apega al patrón [*MVC*](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
     "* Hace énfasis en la seguridad.\n",
     "* Es escalable.\n",
     "* Es muy versátil, ya que es una excelente plataforma para:\n",
@@ -102,27 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: django in c:\\programdata\\anaconda3\\lib\\site-packages (2.2.1)\n",
-      "Requirement already satisfied: pytz in c:\\programdata\\anaconda3\\lib\\site-packages (from django) (2018.5)\n",
-      "Requirement already satisfied: sqlparse in c:\\programdata\\anaconda3\\lib\\site-packages (from django) (0.3.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 10.0.1, however version 19.1.1 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install django"
    ]
@@ -238,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -265,19 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
@@ -379,60 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Type 'manage.py help <subcommand>' for help on a specific subcommand.\n",
-      "\n",
-      "Available subcommands:\n",
-      "\n",
-      "[auth]\n",
-      "    changepassword\n",
-      "    createsuperuser\n",
-      "\n",
-      "[contenttypes]\n",
-      "    remove_stale_contenttypes\n",
-      "\n",
-      "[django]\n",
-      "    check\n",
-      "    compilemessages\n",
-      "    createcachetable\n",
-      "    dbshell\n",
-      "    diffsettings\n",
-      "    dumpdata\n",
-      "    flush\n",
-      "    inspectdb\n",
-      "    loaddata\n",
-      "    makemessages\n",
-      "    makemigrations\n",
-      "    migrate\n",
-      "    sendtestemail\n",
-      "    shell\n",
-      "    showmigrations\n",
-      "    sqlflush\n",
-      "    sqlmigrate\n",
-      "    sqlsequencereset\n",
-      "    squashmigrations\n",
-      "    startapp\n",
-      "    startproject\n",
-      "    test\n",
-      "    testserver\n",
-      "\n",
-      "[sessions]\n",
-      "    clearsessions\n",
-      "\n",
-      "[staticfiles]\n",
-      "    collectstatic\n",
-      "    findstatic\n",
-      "    runserver\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py help"
    ]
@@ -474,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -537,19 +460,19 @@
     "```\n",
     "o\n",
     "```\n",
-    "python manage.py runserver <'rango de transmisión'>:<puerto>\n",
+    "python manage.py runserver <rango de transmisión>:<puerto>\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
-    "* ```'<rango de transmisión>'``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
+    "* ```<rango de transmisión>``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
     "* ```<puerto>``` corresponde al número de puerto desde el cual será accesible el servidor de *Django*.\n",
     "\n",
     "**Notas:**\n",
     "\n",
     "* Si no se especifica el rango de transmisión, el servidor de *Django* sólo será accesible para ```localhost```.\n",
     "* Si no se especifica el puerto, el servidor de *Django* estará disponible en el puerto ```8000```.\n",
-    "* Para que el servidor de *Django* esté disponible para todas las direcciones IP, se definirá el rango de transmisión ```'0.0.0.0'```."
+    "* Para que el servidor de *Django* esté disponible para todas las direcciones IP, se definirá el rango de transmisión ```0.0.0.0```."
    ]
   },
   {
@@ -574,7 +497,7 @@
    },
    "outputs": [],
    "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "!./manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
