--- a/03_el_protocolo_http.ipynb
+++ b/03_el_protocolo_http.ipynb
@@ -11,9 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El protocolo *HTTP*.\n",
-    "\n",
-    "Creado por Tim Berners-Lee en 1989, es el protocolo utilizado para acceder y publicar en la World Wide Web (o  web).\n",
+    "# Introducción a  *HTTP*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creado por [Tim Berners-Lee](https://es.wikipedia.org/wiki/Tim_Berners-Lee) en 1989, es el protocolo utilizado para acceder y publicar en la World Wide Web (o  web).\n",
     "Significa Protocolo de transmisión de hipertexto.\n",
     "\n",
     "Actualmente el [World Wide Web Consortium (*W3C*)](https://www.w3.org) es la entidad encargada, entre otras cosas, de publicar la especificación del protocolo *HTTP*. La versión más reciente es *HTTP/2*, pero la mayoría de los servidores utilizan la versión *HTTP/1.1*.\n",
@@ -33,7 +38,7 @@
     "\n",
     "* **Sin estado.** Es decir, que cada una de las transacciones request/response que se realizan no afectan al estado del cliente o del servidor, además de que cada transacción es totalmente independiente de el resto.\n",
     "* **Independiente del contenido.** Aún cuando es muy común que un servidor *HTTP* entregue documentos *HTML*, pero no existe restricción en el tipo de recurso al que se pueda acceder.\n",
-    "* **Sin conexión.** Una vez que la transacción request/response es terminada, la conexión entre cliente y servidor es destruida.\n"
+    "* **Sin conexión.** Una vez que la transacción petición/respuesta es terminada, la conexión entre cliente y servidor es destruida.\n"
    ]
   },
   {
@@ -178,7 +183,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará la función ```requests.get()``` en la URL https://pythonista.io/cursos para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
+    "* Se utilizará la función ```requests.get()``` en la *URL* https://pythonista.io/cursos para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
    ]
   },
   {
@@ -314,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se aplicará la función ```get_url()``` para la url (https://pythonista.io)[https://pythonista.io]"
+    "* Se aplicará la función ```get_url()``` para la *URL* [https://pythonista.io](https://pythonista.io)"
    ]
   },
   {
@@ -332,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se aplicará la función ```get_url()``` para la URL https://pythonista.io/cur, la cual no existe."
+    "* Se aplicará la función ```get_url()``` para la *URL* https://pythonista.io/cur, la cual no existe."
    ]
   },
   {
@@ -373,9 +378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplos prácticos para el uso de HTTP.\n",
+    "## Ejemplos prácticos para el uso de *HTTP*.\n",
     "\n",
-    "El sitio https://httpbin.org/ incluye ejemplos ilustrativos de los posibles usos del protocolo HTTP."
+    "El sitio https://httpbin.org/ incluye ejemplos ilustrativos de los posibles usos del protocolo *HTTP*."
    ]
   },
   {
@@ -452,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para desplegar una imagen se utilziará el módulo _Image_ de iPython."
+    "* Para desplegar una imagen se utilziará el módulo ```IPython.Display.Image``` de IPython."
    ]
   },
   {
@@ -511,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido son datos en formato JSON."
+    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido son datos en formato *JSON*."
    ]
   },
   {
@@ -609,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
