--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El archivo ```settings.py```.\n",
+    "## El script ```settings.py```.\n",
     "\n",
-    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado ```settings.py```. \n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un script de Python llamado ```settings.py```. \n",
     "\n",
     "La documentación de la configuración de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/settings\n",
     "\n",
@@ -41,13 +41,13 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un script de de Python.\n",
+    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un script de de Python en una ventana del navegador.\n",
     "* La siguiente celda desplegará el contenido del archivo ```tutorial/tutorial/settings.py```.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo define diversas variables, las cuales se encuentran escritas en mayúscula\n",
+    "* El archivo define diversas variables, las cuales se encuentran escritas en mayúsculas.\n",
     "\n",
-    "Cada variable definen ciertos parámentros de configuración del proyecto."
+    "* Cada variable definen ciertos parámentros de configuración del proyecto."
    ]
   },
   {
@@ -74,34 +74,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py``` como un módulo."
+    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!tree"
+    "from tutorial.tutorial import settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from tutorial.tutorial import settings as settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tutorial.tutorial.settings.DEBUG"
+    "settings.DEBUG"
    ]
   },
   {
@@ -126,9 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.DEBUG"
    ]
@@ -144,9 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gg70t^0=+@l5e07#!m%q^933&ht5y!+xdir0dt9_^*wnrxg@2p'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.SECRET_KEY"
    ]
@@ -157,14 +181,25 @@
    "source": [
     "### La variable ```settings.BASE_DIR```.\n",
     "\n",
-    "Esta variable define la ruta en la que s eenecuntra el directorio de origen del proyecto."
+    "Esta variable define la ruta en la que se encuentra el directorio de origen del proyecto."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\josech\\\\Dropbox\\\\Codigo\\\\Pythonista\\\\Cursos\\\\py231\\\\tutorial'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.BASE_DIR"
    ]
@@ -180,9 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tutorial.urls'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.ROOT_URLCONF"
    ]
@@ -193,14 +239,31 @@
    "source": [
     "### La variable ```settings.TEMPLATES```.\n",
     "\n",
-    "Esta variable define la localización y la forma en la que s egestióna  las plantillas del proyecto. "
+    "Esta variable define la localización y los componentes que gestionarán las plantillas del proyecto. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
+       "  'DIRS': [],\n",
+       "  'APP_DIRS': True,\n",
+       "  'OPTIONS': {'context_processors': ['django.template.context_processors.debug',\n",
+       "    'django.template.context_processors.request',\n",
+       "    'django.contrib.auth.context_processors.auth',\n",
+       "    'django.contrib.messages.context_processors.messages']}}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.TEMPLATES"
    ]
@@ -220,20 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
+       "  'NAME': 'C:\\\\Users\\\\josech\\\\Dropbox\\\\Codigo\\\\Pythonista\\\\Cursos\\\\py231\\\\tutorial\\\\db.sqlite3'}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.DATABASES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%ls tutorial/db.sqlite3"
    ]
   },
   {
@@ -316,9 +382,9 @@
    "source": [
     "## Despliegue en producción.\n",
     "\n",
-    "*Django* puede ser configurado de tal forma que pueda ejecutrase en un entorno de desarrollo y bruebas o en un entrono de pproducción.\n",
+    "*Django* puede ser configurado de tal forma que pueda ejecutrase en un entorno de desarrollo y pruebas o en un entorno de producción.\n",
     "\n",
-    "La siguiente liga corrssponde a una serie de sugerencia en caso de publicar un proyecto en un entorno de producción.\n",
+    "La siguiente liga muestra una serie de sugerencia en caso de publicar un proyecto en un entorno de producción.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/"
    ]
@@ -348,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
