--- a/06_urls_y_funciones_de_vista.ipynb
+++ b/06_urls_y_funciones_de_vista.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Tanto el directorio de un proyecto como el directorio de una aplicación pueden contener un archivo ```urls.py```.\n",
     "\n",
-    "Estos scripts son usados por *Django* para relacionar una *URL* con un objeto invocable (funciones o métodos) que será referido como una *función de vista*."
+    "Estos scripts son usados por *Django* para relacionar una *URL* con objeto invocables (funciones o métodos) que a partir de este momento serán referidos como *funciónes de vista*."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "## El script ```urls.py``` de un proyecto.\n",
     "\n",
-    "Los proyectos de *Django* siempre deben de hacer referencia a un archivo ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeados todas las *URLs* del proyecto y de sus aplicaciones.\n",
+    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un archivo ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeados todas las *URLs* del proyecto y de sus aplicaciones.\n",
     "\n",
     "La localización de este archivo es definda con la variable ```ROOT_URLCONF``` del archivo ```settings.py``` del proyecto."
    ]
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tutorial.tutorial.settings as settings"
+    "from tutorial.tutorial import settings"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "source": [
     "### El paquete ```django.contrib```.\n",
     "\n",
-    "Este paquete contiene una biblioteca general herramientas de *Django*. \n",
+    "Este paquete contiene una biblioteca de herramientas comunes de *Django*. \n",
     "\n",
     "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/"
    ]
@@ -152,7 +152,7 @@
    "source": [
     "#### El paquete ```django.contrib.admin```.\n",
     "\n",
-    "Este paquete permite desplegar una aplicación que contiene al sitio de administración del proyecto. \n",
+    "Este paquete contiene un conjunte de herramientas capaces de desplegar un sitio de administración del proyecto.\n",
     "\n",
     "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/admin/\n",
     "\n",
@@ -521,17 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
