--- a/08_gestion_de_urls.ipynb
+++ b/08_gestion_de_urls.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "El módulo ```django.urls``` cuenta con herramientas que permiten identificar y filtrar *URLs*  de modo tal que pueda crear servicios dinámicos a partir de la información contenida en ellos.\n",
     "\n",
-    "La documentacióm corresondiente puede ser consultada en https://docs.djangoproject.com/en/2.1/topics/http/urls/"
+    "La documentacióm corresondiente puede ser consultada en https://docs.djangoproject.com/en/2.2/topics/http/urls/"
    ]
   },
   {
@@ -47,8 +47,7 @@
     "Es convieniente recordar que la sintaxis de la función ```django.urls.path()``` es:\n",
     "\n",
     "```\n",
-    "```python\n",
-    "django.urls.path('<patrón>', <funcion de vista>, <argumentos>)\n",
+    "django.urls.path('<patrón>', <funcion de vista>, <kwargs>)\n",
     "```\n",
     "\n",
     "* Donde  ```<patrón>``` es una cadena de cartacteres que debe de coincidir con la *URL*. "
@@ -143,7 +142,7 @@
     "La función ```django.url.re_path()``` permite hacer búsquedas que coincidan con una expresión regular.\n",
     "\n",
     "```\n",
-    "re_path(r'<expresión regular>' <función de vista>)\n",
+    "re_path(r'<expresión regular>', <función de vista>)\n",
     "```\n",
     "En caso de que la expresión regular extraiga datos, estos datos se ingresarán como argumentos después del objeto ```request```. \n"
    ]
