--- a/09_json_con_django.ipynb
+++ b/09_json_con_django.ipynb
@@ -32,9 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete *json* de Python.\n",
+    "## El paquete ```json``` de Python.\n",
     "\n",
-    "Este paquete *json* cuenta con una biblioteca de herramientas capaces transformar objetos de Python a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
+    "Este paquete ```json``` cuenta con una biblioteca de herramientas capaces transformar objetos de Python a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
    ]
   },
   {
@@ -153,6 +153,15 @@
    "outputs": [],
    "source": [
     "nuevo_estudiante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(nuevo_estudiante)"
    ]
   },
   {
@@ -332,7 +341,7 @@
    "source": [
     "## La clase ```django.http.JsonResponse```.\n",
     "\n",
-    "La clase ```django.http.JsonResponse``` es una subclase de ```django.http.JsonResponse```, la cual permite que una función de vista regrese una respuesta en formato *JSON* a partir de un objeto ```dict```.\n",
+    "La clase ```django.http.JsonResponse``` es una subclase de ```django.http.HttpResponse```, la cual permite que una función de vista regrese una respuesta en formato *JSON* a partir de un objeto ```dict```.\n",
     "\n",
     "``` python\n",
     "JsonResponse(<objeto>)\n",
