--- a/10_clases_de_django_http_servidor.ipynb
+++ b/10_clases_de_django_http_servidor.ipynb
@@ -70,19 +70,19 @@
     "\n",
     "#### Métodos informativos.\n",
     "\n",
-    "* ```get_host()``` regresa la `*URL* del servidor.\n",
+    "* ```get_host()``` regresa la *URL* del servidor.\n",
     "* ```get_port()``` regresa el puerto de conexión al servidor.\n",
-    "* ```get_full_path()``` regresa la URL incluyendo las peticiones.\n",
+    "* ```get_full_path()``` regresa la URL incluyendo los argumentos.\n",
     "* ```ge_full_path_info()``` es similar a ```get_full_path()```, pero utiliznado el atributo ```path_info```.\n",
     "* ```build_absolute_uri()``` regresa la *URL* absoluta.\n",
-    "* ```is_secure()``` indica si la conexión es segira.\n",
+    "* ```is_secure()``` indica si la conexión es segura.\n",
     "\n",
     "#### Métodos de XML.\n",
     "\n",
     "* ```is_ajax()``` indica si el contenido es AJAX.\n",
     "* ```read()``` lee todo el contenido de forma similar al método ```read()``` de ```open()```.\n",
     "* ```readline()``` lee una línea del contenido de forma similar al método ```readline()``` de ```open()```.\n",
-    "* ```readline()``` lee cada línea del contenido y regresaun un objeto tipo ```list``` de forma similar al método ```readlines()``` de ```open()```.\n",
+    "* ```readlines()``` lee cada línea del contenido y regresaun un objeto tipo ```list``` de forma similar al método ```readlines()``` de ```open()```.\n",
     "* ```__iter__()``` regresa un iterador.\n",
     "\n",
     "#### Métodos de *cookies*.\n",
@@ -115,7 +115,7 @@
     "\n",
     "Cuenta con los siguientes métodos que son similares a los del tipo ```dict```:\n",
     "* ```clear()```.\n",
-    "* ```pop()````.\n",
+    "* ```pop()```.\n",
     "* ```popitem()```.\n",
     "* ```setdefault()```.\n",
     "* ```update()```.\n",
@@ -170,17 +170,16 @@
     "\n",
     "#### Métodos de gestión de *cookies*.\n",
     "\n",
-    "* *set_cookie()*\n",
-    "* *set_signed_cookie()*\n",
-    "* *delete_cookie()*\n",
-    "\n"
+    "* ```set_cookie()```\n",
+    "* ```set_signed_cookie()```\n",
+    "* ```delete_cookie()```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Otras respuestas de *Django*."
+    "## Otras subclases de ```django.http.Reponse```."
    ]
   },
   {
@@ -189,9 +188,9 @@
    "source": [
     "### Respuestas por tipo.\n",
     "\n",
-    "* *JsonResponse*.\n",
-    "* *FileResponse*.\n",
-    "* *StreamingResponse*."
+    "* ```django.http.JsonResponse```.\n",
+    "* ```django.http.FileResponse```.\n",
+    "* ```django.http.StreamingResponse```."
    ]
   },
   {
@@ -200,21 +199,22 @@
    "source": [
     "### Mensajes de estado.\n",
     "\n",
-    "####  Mensajes de reenvío (300).\n",
+    "####  Mensajes de reenvío (```300```).\n",
     "\n",
-    "* *HttpResponseRedirect* (302).\n",
-    "* *HttpResponseNotModified* (304).\n",
-    "* *HttpResponsePermanentRedirect* (308). \n",
+    "* ```django.http.HttpResponseRedirect``` (```302```).\n",
+    "* ```django.http.HttpResponseNotModified``` (```304```).\n",
+    "* ```django.http.HttpResponsePermanentRedirect``` (```308```). \n",
     "\n",
-    "#### Mensajes de error del cliente (400).\n",
-    "* *HttpResponseBadRequest* (400)\n",
-    "* *HttpResponseForbidden* (403)\n",
-    "* *HttpResponseNotFound* (404)\n",
-    "* *HttpResponseNotAllowed* (405)\n",
-    "* *HttpResponseGone* (410)\n",
+    "#### Mensajes de error del cliente (```400```).\n",
     "\n",
-    "#### Mensajes de error del servidor (500).\n",
-    "* *HttpResponseServerError* (500)."
+    "* ```django.http.HttpResponseBadRequest``` (```400```)\n",
+    "* ```django.http.HttpResponseForbidden``` (```403```)\n",
+    "* ```django.http.HttpResponseNotFound``` (```404```)\n",
+    "* ```django.http.HttpResponseNotAllowed``` (```405```)\n",
+    "* ```django.http.HttpResponseGone``` (```410```)\n",
+    "\n",
+    "#### Mensajes de error del servidor (```500```).\n",
+    "* ```django.http.HttpResponseServerError``` (```500```)."
    ]
   },
   {
@@ -223,9 +223,9 @@
    "source": [
     "## Excepciones.\n",
     "\n",
-    "* *UnreadablePostError*\n",
-    "* *Http404*\n",
-    "* *BadHeaderError*"
+    "* ```django.http.UnreadablePostError```.\n",
+    "* ```django.http.Http404```.\n",
+    "* ```django.http.BadHeaderError```."
    ]
   },
   {
