--- a/01_introduccion.ipynb
+++ b/01_introduccion.ipynb
@@ -28,13 +28,13 @@
     "\n",
     "La primera sección es una introducción al desarrollo de aplicaciones web y a las funcionalidades básicas de  *Django* en un entorno de prueba.\n",
     "\n",
-    "* Introducción al protocolo HTTP.\n",
+    "* Introducción al protocolo *HTTP*.\n",
     "* Conceptos básicos relacionados con *Django*.\n",
     "* Instalación básica.\n",
     "* Configuración mínima.\n",
     "* Funcionalidades.\n",
     "* Desarrollo de aplicaciones web simples.\n",
-    "* Desarrollo de una API basada en REST. \n",
+    "* Desarrollo de una *API* basada en *REST*. \n",
     "\n",
     "## Segunda sección.\n",
     "\n",
@@ -44,7 +44,7 @@
     "* Definiendo los componentes y modelos del producto.\n",
     "* Diseñando la arquitectura de datos de las aplicaciones.\n",
     "* Configurando y desplegando el entorno de desarrollo y de pruebas.\n",
-    "* Preparando el entorno de producción en un servidor AWS.\n",
+    "* Preparando el entorno de producción en un servidor *AWS*.\n",
     "* Migrando a producción.\n",
     "* Publicando el producto."
    ]
@@ -74,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
